Changed font to use -apple-system and then sans-serif

--- a/dev/public.less
+++ b/dev/public.less
@@ -19,7 +19,7 @@
 // Import and apply the Open Sans font
 // @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,400);
 body {
-  font-family: sans-serif; //'Open Sans', sans-serif;
+  font-family: -apple-system, sans-serif; //'Open Sans', sans-serif;
 }
 
 // Links
