--- a/dev/members-flat.less
+++ b/dev/members-flat.less
@@ -1,8 +1,8 @@
 // Colors
-@members-purple: #8b2c93;
-@members-purple-dark: darken(@members-purple, 10%);
+@members-purple: #B0197E;
+@members-purple-dark: darken(@members-purple, 3%);
 @members-purple-light: lighten(@members-purple, 40%);
-@members-pink: #df0051;
+@members-pink: #E11C52;
 @members-pink-dark: darken(@members-pink, 3%);
 @members-pink-light: lighten(@members-pink, 50%);
 @charcoal: #222;
