--- a/dev/members.less
+++ b/dev/members.less
@@ -1,8 +1,8 @@
 // Colors
-@members-purple: #8b2c93;
+@members-purple: #B1097E;
 @members-purple-dark: darken(@members-purple, 10%);
 @members-puprle-light: lighten(@members-purple, 40%);
-@members-pink: #df0051;
+@members-pink: #E11C52;
 @charcoal: #222;
 @gray: #bbb;
 @white: #fff;
